tablas finales con pm10 y pm2.5 para todos los años

--- a/Seminario.html
+++ b/Seminario.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Aya Toussi, Minaya Moreno Romero y Vanessa" />
+<meta name="author" content="-name: Aya Toussi -name: Minaya Moreno Romero -name: Vanessa Pérez Paredes" />
 
 <meta name="date" content="2023-12-10" />
 
@@ -352,7 +352,8 @@ display: none;
 
 <h1 class="title toc-ignore">Seminario:Calidad del Aire y Defunciones
 por Enfermedades Respiratorias</h1>
-<h4 class="author">Aya Toussi, Minaya Moreno Romero y Vanessa</h4>
+<h4 class="author">-name: Aya Toussi -name: Minaya Moreno Romero -name:
+Vanessa Pérez Paredes</h4>
 <h4 class="date">2023-12-10</h4>
 
 </div>
@@ -363,10 +364,10 @@ por Enfermedades Respiratorias</h1>
 <h2>INTRODUCCIÓN:</h2>
 <p>En este seminario se ha recopilado informacion y llevado a cabo un
 análisis sobre la calidad del aire en las diferentes comunidades
-autónomas de españa y la tasa de muertes por enfermedades respiratorias
-a lo largo de varios años en dichas regiones. Finalmente se ha explorado
-la relacion existente entre la calidad del aire y la mencionada tasa de
-mortalidad.</p>
+autónomas de España Peninsular y la tasa de muertes por enfermedades
+respiratorias a lo largo de varios años en dichas regiones. Finalmente
+se ha explorado la relación existente entre la calidad del aire y la
+mencionada tasa de mortalidad.</p>
 </div>
 <div id="objetivo-general" class="section level2">
 <h2>OBJETIVO GENERAL:</h2>
