carga de paquetes,rmd y r

--- a/Seminario.html
+++ b/Seminario.html
@@ -389,13 +389,16 @@ de defunción por enfermedades respiratorias.</li>
 <h2>METODOLOGIA :</h2>
 <div id="carga-de-paquetes" class="section level3">
 <h3>CARGA DE PAQUETES:</h3>
-<pre class="r"><code>#paquetes a instalar
+<pre class="r"><code>#Paquetes a instalar
 library(ggplot2)
 library(rjson)
 library(readxl)
 library(tidyverse)
 library(jsonlite)
-library(readr)</code></pre>
+library(readr)
+library(dplyr)
+library(readODS)
+library(tidyr)</code></pre>
 </div>
 </div>
 <div id="slide-with-plot" class="section level2">
