metodologia avanzada rmd

--- a/Seminario.html
+++ b/Seminario.html
@@ -398,7 +398,12 @@ INEbase que es el sistema utilizado por el INE (Instituto Nacional de
 Estadística) para el almacenamiento de la información estadística en
 Internet. <a href="https://www.ine.es/jaxiT3/Tabla.htm?t=10803&amp;L=0">Enlace
 directo al recurso utilizado para descargar los archivos</a></li>
-<li></li>
+<li>Filtrar y cargar los datos para cada Comunidad Autónoma,organizarlos
+por años y por Comunidades en dataframes para cada año del 2010 al
+2019.</li>
+<li>Representar la evolución de la tasa de Mortalidad obtenida en las
+diferentes Comunidades Autónomas para cada año en unas gráficas
+distintas del 2010 al 2019.</li>
 </ul>
 </div>
 <div id="carga-de-paquetes" class="section level3">
