--- a/Seminario.html
+++ b/Seminario.html
@@ -406,6 +406,28 @@ diferentes Comunidades Autónomas para cada año en unas gráficas
 distintas del 2010 al 2019.</li>
 </ul>
 </div>
+<div id="metodologías-del-segundo-objetivo-general" class="section level3">
+<h3>Metodologías del Segundo Objetivo General:</h3>
+<ul>
+<li>Se ha sacado la tabla principal en formato .xlsx de los datos de
+Calidad de Aire en España de la página oficial de la OMS <a href="https://www.who.int/data/gho/data/themes/air-pollution/who-air-quality-database/2022">Enlace
+directo al recurso</a>. Viene representada por Provincias y incluye las
+medidas de 3 contaminantes .</li>
+<li>Filtar la tabla principal para los datos que solo vienen por
+España,y luego agrupar los datos dados por Provincias para pasarlos a
+unas tablas representadas por Comunidades Autónomas.</li>
+<li>Obtener las tablas filtradas y agrupadas por cada Comunidad
+Autónoma.</li>
+<li>Representar los datos de cada Comunidad Autónoma a lo largo de los
+años (Del 2010 al 2019).</li>
+<li>Se han buscado otras tablas complementarias (por falta y escasez de
+datos por años y por contaminantes) para incluirlas en el análisis. Para
+ello,se han utilizado varias fuentes de datos (Datos Abiertos de
+España,MITECO,y algunas fuentes y herramientas autonómicas y
+gubernamentales) <a href="https://datos.gob.es/es/">Datos Abiertos de
+España</a>,<a href="https://www.miteco.gob.es/es/calidad-y-evaluacion-ambiental/temas/atmosfera-y-calidad-del-aire/calidad-del-aire/evaluacion-datos/redes.html">MITECO</a></li>
+</ul>
+</div>
 <div id="carga-de-paquetes" class="section level3">
 <h3>CARGA DE PAQUETES:</h3>
 <pre class="r"><code>#PAQUETES A INSTALAR:
